[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.46.1"
factorial = "0.4.0"
itertools = "0.12.0"
num = "0.4.1"
regex = "1.10.2"
z3 = { git="https://github.com/prove-rs/z3.rs.git" }
